<resources>

    <string name="app_name">Briefcase</string>
    <string name="welcome_text">an overview of your closet</string>
    <string name="add_clothing_item">Add Clothing Item</string>
    <string name="add_outfit">Add Outfit</string>
    <string name="delete_outfit">Delete Outfit</string>
    <string name="add_photo">Add Photo</string>
    <string name="change_photo">Change Photo</string>
    <string name="edit_clothing_item">Edit Clothing Item</string>
    <string name="edit_outfit">Edit Outfit</string>
    <string name="delete_clothing_item">Delete Clothing Item</string>
    <string name="give_away_clothing_item">Give Away Clothing Item</string>
    <string name="done">Done</string>
    <string name="filter">Filter</string>
    <string name="laundry">Laundry</string>
    <string name="closet">Closet</string>
    <string name="type">Type:</string>
    <string name="color">Color:</string>
    <string name="material">Material:</string>
    <string name="pattern">Pattern:</string>
    <string name="care">Care</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_auth_web_client_id" translatable="false">675444101491-1ang59lc8tgpkcmgibjhe8rdfg4ns8d1.apps.googleusercontent.com</string>
    <string name="frame_title_clothing_item">Clothing Item Details</string>
    <string name="frame_title_outfit">Outfit Details</string>
    <string name="frame_title_my_closet">My Closet</string>
    <string name="frame_title_my_outfits">My Outfits</string>
    <string name="plan_outfit">Plan Outfit</string>
    <string name="unplan_outfit">Unplan Outfit</string>
    <string name="create_new_outfit">Create new outfit</string>
    <string name="select_from_saved">Select from saved</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_preferences">Change Preferences</string>
    <string name="occasion">Occasion</string>
    <string name="season">Season</string>
    <string name="does_it_fit">Does It Fit?</string>
    <string name="find_similars_in_my_closet">Find Similars In My Closet</string>
    <string name="my_colors">My Colors</string>
    <string name="my_body_type">My Body Type</string>
    <string name="color_palette">Color Palette</string>
    <string name="planned_on">Planned On:</string>
    <string name="select_date">Select Date</string>
    <string name="sort_by">Sort By:</string>
    <string name="descending">Descending</string>
    <string name="statistics">Statistics</string>
    <string name="similars_in_my_closet">Similars in my closet</string>
    <string name="closet_statistics">Closet Statistics</string>
    <string name="choose_type">Choose Type</string>
    <string name="most_worn">Most Worn</string>
    <string name="least_worn">Least Worn</string>
    <string name="colors">Colors</string>
    <string name="closet_usage">Closet usage: </string>
    <string name="closet_worth">Closet worth: </string>
    <string name="clothing_count">Clothing count: </string>
    <string name="closet_sharing">Closet Sharing</string>
    <string name="add_to_swap">Add To Swap</string>
    <string name="swap">Swap</string>
    <string name="money_spent_by_month">Money Spent By Month</string>
    <string name="include_laundry">Include Laundry</string>
    <string name="my_swap_items">My Swap Items</string>
    <string name="get_this_item">Get This Item</string>
    <string name="confirm">Confirm</string>


    <!--clothing care-->
    <string name="care_washing">Wash regularly</string>
    <string name="care_washing_gentle">Wash gentle</string>
    <string name="care_washing_gentle_very">Wash very gentle</string>
    <string name="care_washing_hand">Hand-wash</string>
    <string name="care_washing_no">Do not wash</string>
    <string name="care_washing_temp_high">Wash on high temperature</string>
    <string name="care_washing_temp_medium">Wash on medium temperature</string>
    <string name="care_washing_temp_low">Wash on low temperature</string>
    <string name="care_washing_60">Wash on 60 degrees Celsius</string>
    <string name="care_washing_40">Wash on 40 degrees Celsius</string>
    <string name="care_washing_30">Wash on 30 degrees Celsius</string>
    <string name="care_tumble_dry">Tumble dry</string>
    <string name="care_tumble_dry_high_heat">Tumble dry on high heat</string>
    <string name="care_tumble_dry_medium_heat">Tumble dry on medium heat</string>
    <string name="care_tumble_dry_low_heat">Tumble dry on low heat</string>
    <string name="care_tumble_dry_no">Do not tumble dry</string>
    <string name="care_tumble_dry_no_heat">Do not tumble dry on heat</string>
    <string name="care_drying_natural">Dry naturally</string>
    <string name="care_drying_drip">Dry by hanging while dripping wet</string>
    <string name="care_drying_drip_shade">Dry by hanging while dripping wet in shade</string>
    <string name="care_drying_flat">Dry by laying on a flat surface</string>
    <string name="care_drying_flat_in_shade">Dry by laying on a flat surface in shade</string>
    <string name="care_drying_line">Dry by hanging on a washing line</string>
    <string name="care_drying_line_in_shade">Dry by hanging on a washing line in shade</string>
    <string name="care_drying_in_shade">Dry in shade</string>
    <string name="care_ironing">Iron regularly</string>
    <string name="care_ironing_no">Do not iron</string>
    <string name="care_ironing_temp_high">Iron on high temperature</string>
    <string name="care_ironing_temp_medium">Iron on medium temperature</string>
    <string name="care_ironing_temp_low">Iron on low temperature</string>
    <string name="care_ironing_steam">Iron with steam</string>
    <string name="care_ironing_steam_no">Do not iron with steam</string>
    <string name="care_bleach">Regular bleach</string>
    <string name="care_bleach_no">Do not bleach</string>
    <string name="care_bleach_non_clorine">Non-clorine bleach</string>
    <string name="care_dry_clean">Dry clean</string>
    <string name="care_dry_clean_no">Do not dry clean</string>
    <string name="care_wring">Wring when washing</string>
    <string name="care_wring_no">Do not wring when washing</string>

</resources>