<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".activities.fit.FitStartPageFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/title_size"
        android:layout_marginBottom="@dimen/title_size"
        android:text="@string/does_it_fit"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/find_similars_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:background="@drawable/button"
        android:text="@string/find_similars_in_my_closet"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/my_colors_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonInverse"
        android:background="@drawable/button_inverse"
        android:text="@string/my_colors"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/my_body_type_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonInverse"
        android:background="@drawable/button_inverse"
        android:text="@string/my_body_type"/>

</LinearLayout>
