<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.outfits.PlanOutfitDialogFragment"
    android:orientation="vertical"
    android:gravity="center_vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plan_outfit"
        android:textSize="@dimen/title_size"
        android:layout_marginBottom="@dimen/title_size"
        android:gravity="center_horizontal"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/select_from_saved_btn"
        android:text="@string/select_from_saved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:background="@drawable/button"
        android:layout_marginBottom="@dimen/title_size"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_new_outfit_btn"
        android:text="@string/create_new_outfit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonInverse"
        android:background="@drawable/button_inverse"/>


</LinearLayout>